--- a/phoenix-bundle/tranquil.css
+++ b/phoenix-bundle/tranquil.css
@@ -455,3 +455,7 @@
 .userPopout-2j1gM4 .footer-1N3bR3 {
   background-color: var(--quaternary-color) !important;
 }
+.theme-light, .theme-dark, .theme-amoled {
+--background-primary: rgba(var(--transparencycolor), .2);
+--background-secondary: rgba(var(--transparencycolor), .3);
+}
